--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+.jumbotron{
+  margin-bottom: 0px;
+  background-color: lightcyan;
   text-align: center;
+  font-family: 'Zilla Slab', serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.specialPadding{
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bd-toc{
+  position: sticky;
+  top: 4rem;
+  overflow-y: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h4{
+  font-family:'Zilla Slab', serif;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar{
+  background-color: lightsalmon;
+  font-family: 'Zilla Slab', serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imgAdjust{
+  width: 800px;
+  height: 450px;
+}
+
+.carousel{
+  margin: auto;
+  padding: auto;
+  border: lightcyan, solid;
+}
+
+a .card{
+  border-radius: 20px;
+}
+
+.card-img-top{
+  border-radius: 20px 20px 0px 0px;
+}
+
+.caraControl{
+  background-color: rgba(0,0,0,0.3);
+}
+
+.carousel-caption{
+  background-color: rgba(0,0,0,0.5);
+}
+
+ul{
+  list-style-type: none;
+}
+
+footer{
+  background-color: lightsalmon;
+  margin-top: 20px;
+}
+
+.socialPadding{
+  padding-left:10px;
+  padding-right: 10px;
 }
